Grid-scrollbar-allignments-Fixed

--- a/src/app/components/framework/smarttable/pagination/pagination.component.scss
+++ b/src/app/components/framework/smarttable/pagination/pagination.component.scss
@@ -1,10 +1,9 @@
 .pagination {
   display: inline-block;
-  margin: 0px 0%;
-  font-family:Roboto Bold!important;
-  font-size:12pt!important;
-  color:#232F3F!important;
-
+  margin: 0% 15%;
+  font-family: Roboto Bold !important;
+  font-size: 12pt !important;
+  color: #232F3F !important;
 }
 
 .pagination a {
