--- a/src/app/components/framework/smarttable/smarttable.component.scss
+++ b/src/app/components/framework/smarttable/smarttable.component.scss
@@ -42,12 +42,11 @@ $dateColumnWidth:110px;
 }
 
 .ag-fresh .ag-ltr .ag-cell-no-focus, .ag-fresh .ag-ltr .ag-cell-focus {
-  padding: 19px 5px 8px 18px;
+  padding: 9px 5px 8px 18px;
   /*border-right: 1px solid #e0e0e0 !important;*/
   /*border-bottom: 1px solid #e0e0e0 !important;*/
   outline: none;
-  border : none;
- 
+  border: none;
 }
 
 .ag-fresh .ag-row-odd {
