--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -80,7 +80,7 @@ label {
 .ag-body-container {
   /*height: auto !important;
   overflow-y: scroll;*/
-  height: 200px !important;
+  height: 297px !important;
 }
 .login_text {
         margin-top: 30%;
